Tries to fix header problem on mobile devices

--- a/src/js/components/container/Topbar.module.scss
+++ b/src/js/components/container/Topbar.module.scss
@@ -9,6 +9,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  height: 100%;
   width: 70%;
 }
 
@@ -16,6 +17,7 @@
   .header {
     flex-direction: column;
     width: 90%;
+    height: 100%;
   }
 }
 
