--- a/src/js/components/presentational/SkillsList.module.scss
+++ b/src/js/components/presentational/SkillsList.module.scss
@@ -16,4 +16,5 @@ $sans-serif-font: 'Lato', sans-serif;
 .item {
   font-family: $sans-serif-font;
   line-height: 1.5rem;
+  text-align: left;
 }
